# ghomeapp-lambdaonrust-kamefood

./: .gitignore  Cargo.toml  package-lock.json  package.json
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
src/: foods.rs  main.rs
